<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.AddBankAccountActivity"
    tools:showIn="@layout/activity_add_bank_account">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_user_profile"
            app:civ_border_color="#8FBFE0"
            app:civ_border_width="3dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ifsclayoutcodeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/ifscCodeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ifsc"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ123456789"
                android:singleLine="true"
                android:maxLength="11"
                android:shadowColor="@color/colorPrimary"
                android:drawablePadding="15dp"
                android:drawableLeft="@drawable/ic_ifcf"/>
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/accountNumberlayoutEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/accountNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_account_number"
                android:inputType="number"
                android:singleLine="true"
                android:maxLength="13"
                android:shadowColor="@color/colorPrimary"
                android:drawableLeft="@drawable/ic_account_num"
                android:drawablePadding="15dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/accountHolderNamelayoutEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/accountHolderNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_account_holder_name"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:singleLine="true"
                android:shadowColor="@color/colorPrimary"
                android:drawablePadding="15dp"
                android:drawableLeft="@drawable/ic_account_holder"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mobileNumberlayoutEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/mobileNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="10"
                android:singleLine="true"
                android:hint="@string/enter_mobile_number"
                android:drawablePadding="15dp"
                android:drawableLeft="@drawable/ic_phone_num"/>
        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />
        <Button
            android:id="@+id/addBankAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:background="@drawable/my_drawable"
            android:textColor="#fff"/>
    </LinearLayout>
</LinearLayout>